# Add material icons

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<title></title>
 	<!-- Webix Library -->
 	<script type="text/javascript" src="//cdn.webix.com/edge/webix.js"></script>
+	<link rel="stylesheet" href="//cdn.webix.com/materialdesignicons/5.8.95/css/materialdesignicons.min.css" type="text/css" charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="//cdn.webix.com/edge/webix.css">
 
 	<!-- App -->
